# api-auth

./: Cargo.toml  diesel.toml
src/: config.rs  main.rs  schema.rs
src/database/: mod.rs
src/database/authorization/: mod.rs
src/handlers/authentication/: login.rs  registration.rs
src/routes/: routes.rs  routes_setup.rs
src/routes/route_objects/: error_response.rs  login_request.rs  registration_request.rs
