[package]
name = "api-auth"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.4.11", default-features = false}
#rocket = { version = "0.5.1", default-features = false, features = ["json"]}

diesel = { version = "1.4.8", features = ["postgres", "uuidv07"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
dotenv = "0.15.0"
winapi = { version = "0.3.9", features = ["winerror"] }
jsonwebtoken = "9.2.0"
tokio = { version = "1.38.0",features = ["full"] }
chrono = "0.4.38"
shuttle-rocket = "0.46.0"
shuttle-runtime = "0.46.0"

[dependencies.rocket_contrib]
version = ">=0.4.11"
default-features = false
features = ["json","diesel_postgres_pool"]

#[dependencies.rocket_db_pools]
#version = "0.2.0"
#default-features = false
#features = ["diesel_postgres"]

